# aiohypixel-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
aiohypixel/: __init__.py  client.py  errors.py  http.py  ratelimiter.py
aiohypixel/types/: __init__.py  key.py
