[project]
name = "aiohypixel-py"
version = "0.1.0"
description = "An asynchronous Hypixel API wrapper."
authors = [
    {name = "JacobMonck", email = "jacobamonck@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
