[project]
name = "aiohypixel-py"
version = "0.1.0"
description = "An asynchronous Hypixel API wrapper."
authors = [
    {name = "JacobMonck", email = "jacobamonck@gmail.com"},
]
dependencies = [
    "aiohttp>=3.8.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "black>=23.1.0",
]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
